--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ uvicorn==0.17.6
 face_recognition==1.3.0
 fastapi==0.70.1
 numpy==1.21.4
-Pillow==8.4.0
+Pillow>=9.2.0
 pydantic==1.8.2
 starlette>=0.25.0
